Horizontal scrolling in edit mode fixed

--- a/ng-app/app/app.component.css
+++ b/ng-app/app/app.component.css
@@ -5,7 +5,7 @@
   height: 100vh;
   border-right: 5px solid #3f51b5;
   position: fixed;
-  z-index: 99999999999;
+  z-index: 200;
   background-color: #fff;
 }
 
